# open-relay

./: .gitignore  CONTRIBUTING.md  Makefile  docker-compose.yml  readme.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
api-service/: Dockerfile  go.mod  go.sum  main.go
api-service/config/: config.go
api-service/db/: db.go  endpoints.go  events.go  projects.go
api-service/handlers/: analytics.go  endpoints.go  events.go  projects.go
api-service/middleware/: auth.go
api-service/telemetry/: tracer.go
api-service/websocket/: client.go  hub.go
cli/: go.mod  main.go
cli/cmd/: listen.go  root.go
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: EventFeed.tsx  ReplayButton.tsx  Sidebar.tsx  StatusBadge.tsx
dashboard/hooks/: useWebSocket.ts
dashboard/lib/: api.ts
ingestion-service/: Dockerfile  go.mod  go.sum  main.go
ingestion-service/config/: config.go
ingestion-service/handlers/: health.go  webhook.go
ingestion-service/models/: models.go
ingestion-service/queue/: redis.go
ingestion-service/store/: db.go  events.go
ingestion-service/telemetry/: tracer.go
sdk/python/: README.md  pyproject.toml
sdk/python/openrelay/: __init__.py  client.py  models.py
sdk/typescript/: package.json  (+2 more)
terraform/: cloudwatch.tf  ec2.tf  ecr.tf  elasticache.tf  iam.tf  main.tf  networking.tf  outputs.tf  rds.tf  terraform.tfvars  variables.tf
worker-service/: Dockerfile  go.mod  go.sum  main.go
(+20 files in other folders)
