[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openrelay-sdk"
version = "0.1.0"
description = "Python SDK for OpenRelay webhook delivery infrastructure"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ritanshu Patel" }]
requires-python = ">=3.8"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/RitanshuPatelMMR/open-relay"